Code cleanup
- Use new SequencedCollection getters
- Apply `abstract` to all mixins
- Add private constructor to all Util classes